--- a/vcweb/static/tmpls/month-day.html
+++ b/vcweb/static/tmpls/month-day.html
@@ -1,19 +1,12 @@
 <div class="cal-month-day <%= cls %>">
-	<span class="pull-right" data-cal-date="<%=  data_day %>"  data-cal-view="day" data-toggle="tooltip" title="<%= tooltip %>"><%= day %></span>
+	<span class="pull-right" data-cal-date="<%= data_day %>" data-cal-view="day" data-toggle="tooltip" title="<%= tooltip %>"><%= day %></span>
 	<% if (events.length > 0) { %>
-		<div class="events-list">
-			<% _.each(events, function(event){ %>
-            <% var  startDate = new Date(parseInt(event.start)), endDate = new Date(parseInt(event.end)); %>
-                <% if(endDate - startDate > 85500000) { %>
-                    <a href="<% if (event.url.length > 0) {%><%= event.url %><% } else { %>#<% } %>" data-event-id="<%= event.id %>" data-event-class="<%= event['class'] %>"
-                       class="pull-left event <%= event['class'] %> event<%= event.id %>" data-toggle="tooltip"
-                       title="<%= event.title + ", Start Date: "+ startDate + ", End Date: "+ endDate + ", Capacity: "+ event.capacity %>" data-event-start="<%= event.start %>" data-event-end="<%= event.end %>"></a>
-                <% } else { %>
-                    <a href="<% if (event.url.length > 0) {%><%= event.url %><% } else { %>#<% } %>" data-event-id="<%= event.id %>" data-event-class="<%= event['class'] %>"
-                       class="pull-left event <%= event['class'] %> event<%= event.id %>" data-toggle="tooltip"
-                       title="<%= event.title + ", Start Time: "+ startDate.toTimeString() + ", End Time: "+ endDate.toTimeString() + ", Capacity: "+ event.capacity  %>" data-event-start="<%= event.start %>" data-event-end="<%= event.end %>"></a>
-                <% } %>
-            <% }); %>
+		<div class="events-list" data-cal-start="<%= start %>" data-cal-end="<%= end %>">
+			<% _.each(events, function(event) { %>
+				<a href="<%= event.url ? event.url : 'javascript:void(0)' %>" data-event-id="<%= event.id %>" data-event-class="<%= event['class'] %>"
+					class="pull-left event <%= event['class'] %>" data-toggle="tooltip"
+					title="<%= event.title %>"></a>
+			<% }); %>
 		</div>
 	<% } %>
 </div>
