Upgrading Font-Awesome to 4.0.3 version.
--HG--
rename : vcweb/static/bootstrap/font/FontAwesome.otf => vcweb/static/bootstrap/fonts/FontAwesome.otf
rename : vcweb/static/bootstrap/font/fontawesome-webfont.eot => vcweb/static/bootstrap/fonts/fontawesome-webfont.eot
rename : vcweb/static/bootstrap/font/fontawesome-webfont.svg => vcweb/static/bootstrap/fonts/fontawesome-webfont.svg
rename : vcweb/static/bootstrap/font/fontawesome-webfont.ttf => vcweb/static/bootstrap/fonts/fontawesome-webfont.ttf
rename : vcweb/static/bootstrap/font/fontawesome-webfont.woff => vcweb/static/bootstrap/fonts/fontawesome-webfont.woff

--- a/vcweb/static/tmpls/week.html
+++ b/vcweb/static/tmpls/week.html
@@ -18,5 +18,5 @@
 	<%= cal._week() %>
 </div>
 <% } else  { %>
-	<p><%= cal.locale.no_events_in_day %></p>
+	<p>No Events Scheduled this week.</p>
 <% }  %>
